Move Lookup hack to use Unsafe, mimicking SecureJarVerifier Use the system property `-Dsecurejarhandler.useUnsafeAccessor=false` to revert to previous behaviour
Signed-off-by: AterAnimAvis <AterAnimAvis@gmail.com>